# test-harness-v02-rust

./: .gitignore  Taskfile.yml  flake.nix  justfile
component/: Cargo.toml  Taskfile.yml  justfile
component/src/: lib.rs
component/tests/: count_tasks.rs  wasm_count_tasks.rs
