[package]
name = "task-component"
version = "0.1.0"
edition = "2021"
description = "WASM task component"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"

[package.metadata.component]
package = "common:tasks"

[package.metadata.component.target]
path = "../../common/wit"
world = "task-component"
